issue css on IOS device

--- a/web/src/app/layout/menu/menu.component.scss
+++ b/web/src/app/layout/menu/menu.component.scss
@@ -365,7 +365,7 @@ button {
 
 .scrollable-menu {
   position: relative;
-  background-color: red;
+  background-color: gold;
   padding-left: 10px;
   padding-right: 10px;
 }
